--- a/desafios/cordel/estilos.css
+++ b/desafios/cordel/estilos.css
@@ -1,4 +1,24 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@media (max-width: 760px){
+
+header > h1 {
+    font-size: 3em;
+}
+section > p
+{
+    font-size: 0.6em;
+    line-height: 1.5em;
+}
+
+}
+
+:root{
+    --fonte-padrão:  Verdana, Geneva, Tahoma, sans-serif;
+    --fonte-destaque: 'Passion One', cursiva;
+    --fonte-hand-write: 'Sriracha', cursiva;
+}
 
 *{
     margin: 0px;
@@ -16,7 +36,8 @@ header{
 }
 h1{
     font-variant: small-caps;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: var(--fonte-destaque);
+    font-size: 5em;
 }
 a{
     color: white;
@@ -30,15 +51,23 @@ a:hover{
 section{
     padding:10vh 0 10vh 5vh;
     line-height: 2em;
+    font-family: var(--fonte-hand-write);
+    font-size: 2em;
+}
+section > p{
+    padding-bottom: 2em;
 }
 .imagem{
     background-color: rgba(0, 0, 0, 0.658);
     color: white;
 }
 .imagem > p{
-    display: block;
-    width: 300px;
+    display: inline-block;
+    padding: 10px;
     background-color: rgba(0, 0, 0, 0.281);
+}
+section#img01{
+    background-image: url('../cordel/imagens/background001.jpg');
 }
 .normal{
     background-color: white;
