--- a/desafios/cordel/estilos.css
+++ b/desafios/cordel/estilos.css
@@ -52,22 +52,25 @@ section{
     padding:10vh 0 10vh 5vh;
     line-height: 2em;
     font-family: var(--fonte-hand-write);
-    font-size: 2em;
-    background-position: right center;
-    background-attachment: fixed;
-    background-size: cover;
-}
+    font-size: 2em;}
+   
 section > p{
     padding-bottom: 2em;
 }
 .imagem{
     background-color: rgba(0, 0, 0, 0.658);
     color: white;
+    background-position: right center;
+    background-attachment: fixed;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.61);
 }
 .imagem > p{
     display: inline-block;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.281);
+    text-shadow: 1px 1px 0px black;
+
 }
 section#img01{
     background-image: url('../cordel/imagens/background001.jpg');
